name:                Lykah
version:             0.0.2
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:      http://github.com/johannesgerer/buchhaltung/issues
License:          MIT
License-file:     LICENSE
Author:           Johannes Gerer
Maintainer:       Johannes Gerer <oss@johannesgerer.com>
Homepage:         http://johannesgerer.com/buchhaltung
Stability:        Experimental
category:       Web
synopsis:      A static website and blog generator
description:
   Build websites using the full power and flexibility of Haskell.
   .
   See <https://github.com/johannesgerer/Lykah Readme> on Github.


Extra-source-files:
                   README.md
                   stack.yaml

executable lykah
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts=-N -H1200M"
                       -- -Wall
                       -- -p
                       -- -fprof-auto
  Hs-source-dirs: src
  other-modules:
                Lykah
              , Lykah.Assets
              , Lykah.BlazeTH
              , Lykah.BuildingBlocks
              , Lykah.EHtml
              , Lykah.Formatting
              , Lykah.JohannesgererCom
              , Lykah.Structure
              , Lykah.Style
              , Lykah.Theme2
  build-depends:       ListLike
                     , aeson >= 1.0.0
                     , array >= 0.5.0.0
                     , base
                     , blaze-markup >= 0.7.1
                     , blazeT >= 0.0.5
                     , clay >= 0.12
                     , containers >= 0.5.5.1
                     , directory < 1.3
                     , filepath
                     , filesystem-trees
                     , formatting
                     , mtl
                     , old-locale
                     , regex-compat
                     , regex-posix
                     , safe
                     , split
                     , template-haskell
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
   
library
  ghc-options:         -O2
                       -- -Wall
                       -- -p
                       -- -fprof-auto
  Hs-source-dirs: src
  exposed-modules:
                Lykah
              , Lykah.Assets
              , Lykah.BlazeTH
              , Lykah.BuildingBlocks
              , Lykah.EHtml
              , Lykah.Formatting
              , Lykah.JohannesgererCom
              , Lykah.Structure
              , Lykah.Style
              , Lykah.Theme2
  build-depends:       ListLike
                     , aeson >= 1.0.0
                     , array >= 0.5.0.0
                     , base
                     , blaze-markup >= 0.7.1
                     , blazeT >= 0.0.5
                     , clay >= 0.12
                     , containers >= 0.5.5.1
                     , directory < 1.3
                     , filepath
                     , filesystem-trees
                     , formatting
                     , mtl
                     , old-locale
                     , regex-compat
                     , regex-posix
                     , safe
                     , split
                     , template-haskell
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
